--- a/src/@crema/core/AppLayout/Default/index.style.less
+++ b/src/@crema/core/AppLayout/Default/index.style.less
@@ -11,7 +11,7 @@
     padding-bottom: 46px;
 
     & .app-main-footer {
-      position: fixed;
+      //position: fixed;
       left: 0;
       right: 0;
       bottom: 0;
@@ -301,6 +301,7 @@
   .appMainFixedFooter & {
     max-height: calc(100vh - 104px);
   }
+
 
   @media screen and (min-width: @screen-md) {
     max-height: calc(100vh - 71px);
