--- a/src/@crema/core/AppScrollbar/index.style.less
+++ b/src/@crema/core/AppScrollbar/index.style.less
@@ -9,7 +9,7 @@
   & .simplebar-offset,
   & .simplebar-content-wrapper,
   & .simplebar-content {
-    height: 100%;
+    //height: 100%;
     display: flex;
     flex-direction: column;
     flex: 1;
